# JustFacts

./: LICENSE  README.md  crew.yaml  newsapi_tool.py  pyproject.toml  requirements.txt
src/config/: agents.yaml  tasks.yaml
src/crew/: agents.py  tasks.py
src/justfacts/: crew.py  main.py
src/justfacts/config/: tasks.yaml
src/justfacts/tools/: factcheck_tool.py  newsapi_tool.py
src/tools/: fact_checker.py  factcheck_tool.py  news_fetcher.py  newsapi_tool.py  summarizer.py
src/webapp/: app.py
src/webapp/static/: app.js  styles.css
src/webapp/templates/: index.html
webapp/: app.py
webapp/static/: app.js  styles.css
webapp/templates/: index.html
