[project]
name = "justfacts"
version = "0.1.0"
description = "JustFacts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0"
]

[project.scripts]
justfacts = "justfacts.main:run"
run_crew = "justfacts.main:run"
train = "justfacts.main:train"
replay = "justfacts.main:replay"
test = "justfacts.main:test"
run_with_trigger = "justfacts.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
